--- a/pipeline/pyproject.toml
+++ b/pipeline/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "click>=8.3.1",
     "pandas>=2.3.3",
     "psycopg2-binary>=2.9.11",
+    "psycopg[binary,pool]>=3.3.2",
     "pyarrow>=22.0.0",
     "sqlalchemy>=2.0.44",
     "tqdm>=4.67.1",
@@ -16,5 +17,6 @@ dependencies = [
 [dependency-groups]
 dev = [
     "jupyter>=1.1.1",
+    "notebook>=7.5.3",
     "pgcli>=4.3.0",
 ]
