--- a/02-workflow-orchestration/docker-compose.yaml
+++ b/02-workflow-orchestration/docker-compose.yaml
@@ -59,7 +59,14 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - /tmp/kestra-wd:/tmp/kestra-wd
     environment:
+      env_file: .env_encoded
+      #SECRET_GCP_CREDS: ${GCP_CREDS}
       KESTRA_CONFIGURATION: |
+        kestra:
+        variables:
+          env:
+            prefix: ""
+
         datasources:
           postgres:
             url: jdbc:postgresql://kestra_postgres:5432/kestra
