--- a/04-analytics-engineering/taxi_rides_ny/dbt_project.yml
+++ b/04-analytics-engineering/taxi_rides_ny/dbt_project.yml
@@ -37,3 +37,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 models:
   taxi_rides_ny:
+    staging:
+      +materialized: view
+    intermediate:
+      +materialized: table
+    marts:
+      +materialized: table
